--- a/Two10.CountryLookup/Two10.CountryLookup.csproj
+++ b/Two10.CountryLookup/Two10.CountryLookup.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Country.cs" />
     <Compile Include="ReverseLookup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GeoJsonParser.cs" />
