embed the json file, fixed #1

--- a/Two10.CountryLookup/Two10.CountryLookup.csproj
+++ b/Two10.CountryLookup/Two10.CountryLookup.csproj
@@ -51,9 +51,7 @@
     <Compile Include="GeoJsonParser.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="country-list.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <EmbeddedResource Include="country-list.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
