Make region-list geoJSON format compatible
So that Github can render regions nicely on a world map.
See https://help.github.com/articles/mapping-geojson-files-on-github/

--- a/Two10.CountryLookup/Two10.CountryLookup.csproj
+++ b/Two10.CountryLookup/Two10.CountryLookup.csproj
@@ -51,7 +51,7 @@
     <Compile Include="GeoJsonParser.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="region-list.json" />
+    <EmbeddedResource Include="region-list.geojson" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
